typo; update post-presentation

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="libs/xaringanExtra-clipboard/xaringanExtra-clipboard.js"></script>
     <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
     <script src="libs/xaringanExtra-progressBar/progress-bar.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"dcf7a45f855e4779890365c80ebbfc95","expires":14}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"xa3ca9e4661a439bb089deccee7e0a88","expires":14}</script>
     <script src="libs/himalaya/himalaya.js"></script>
     <script src="libs/js-cookie/js.cookie.js"></script>
     <link href="libs/editable/editable.css" rel="stylesheet" />
@@ -47,8 +47,6 @@ class: title-slide, inverse, center, middle
 
 
 #### Université Laval • CRBLM • CRIHN
-
-#### Colloque du CRIHN • 11 octobre 2023
 
 ---
 
@@ -172,7 +170,7 @@ ipa_pt("tipos")
 ipa_pt("quiséssemos")
 #&gt; [1] "ki.ˈzɛ.se.mos"
 ipa_pt("parangaricutirrimirruaro")
-#&gt; [1] "pa.ɾan.ga.ɾi.ku.ti.xi.mi.xu.ˈa.ɾo"
+#&gt; [1] "pa.ɾan.ga.ɾi.ku.ti.xi.mi.ˈxu.a.ɾo"
 ```
 
 --
@@ -817,7 +815,7 @@ lus_bigramas |&gt;
 
 ## Exemple 13 : vowel plot 🗣️
 
-- A simple *wrapper* for F1/F2 in `ggplot2`. Example with `vowels` (hypothetical values): 
+- A simple *wrapper* for F1/F2 in `ggplot2`. Example with `vowels` (hypothetical values) : 
 
 
 ```r
